# proxy-app

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  codecov.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
src/: __init__.py  _version.py  containers.py  ip_utils.py  main.py  main_dummy.py
src/app/: __init__.py  app.py  proxy_item.py
src/proxy/: __init__.py  base.py  dummy.py  https.py
tests/: test_containers.py  test_ip_utils.py  test_main.py  test_main_dummy.py
tests/proxy/: test_dummy.py  test_proxy.py
