[tool.poetry]
name = "proxy-app"
description = "Menu bar app for proxy"
version = "0.1.0"
license = "MIT"

authors = [
    "Ruslan Mukhametshin <rusmux73@gmail.com>"
]
readme = "README.md"

packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
rumps = "^0.4.0"
requests = "^2.28.1"
dependency-injector = "^4.40.0"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
py2app = "^0.28.4"
wemake-python-styleguide = "^0.17.0"
pytest = "^7.2.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
