[metadata]
name = Proxy
description = Proxy menu bar app
version = attr: src.__version__
license = MIT

author = Ruslan Mukhametshin
author_email = rusmux73@gmail.com


long_description = file: README.md
long_description_content_type = text/markdown
keywords = proxy, menubar, rumps
classifiers =
    Framework :: rumps
    Programming Language :: Python :: 3

[options]
python_requires = >=3.8, <4
setup_requires = py2app

packages = find:
include_package_data = true

[options.packages.find]
exclude =
    *tests*

[options.package_data]
* = icons/*

[py2app]
iconfile = src/app/icons/icon.png
dist-dir = dist

[py2app.plist]
CFBundleShortVersionString = attr: src.__version__
LSUIElement = true
